--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <header class="container">
         <nav>
-            <div class="logo"><strong>DAYLAB</strong></div>
+            <div class="logo" style="display: flex; align-items: center; gap: 12px;">
+                <img src="logo.jpeg" alt="DayLab Logo" style="height: 40px; width: auto; object-fit: contain;">
+                <strong>DAYLAB</strong>
+            </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
@@ -63,14 +66,4 @@
             </div>
         </section>
         <section class="text-center">
-            <a href="bloodtest.html" class="btn-main">Start Analysis</a>
-        </section>
-    </main>
-
-    <footer class="text-center">
-        <p>&copy; 2025 DAYLAB – All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+            <a href="bloodtest.html
