--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
     <header class="container">
         <nav>
-            <div class="logo" style="display: flex; align-items: center; gap: 12px;">
+            <a href="index.html" class="logo" style="display: flex; align-items: center; gap: 12px; text-decoration: none; color: inherit;">
                 <img src="logo.jpeg" alt="DayLab Logo" style="height: 40px; width: auto; object-fit: contain;">
                 <strong>DAYLAB</strong>
-            </div>
+            </a>
+            
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
@@ -66,4 +67,14 @@
             </div>
         </section>
         <section class="text-center">
-            <a href="bloodtest.html
+            <a href="bloodtest.html" class="btn-main">Start Analysis</a>
+        </section>
+    </main>
+
+    <footer class="text-center">
+        <p>&copy; 2025 DAYLAB – All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
