--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
     <header class="container">
         <nav>
-            <a href="index.html" class="logo" style="display: flex; align-items: center; gap: 12px; text-decoration: none; color: inherit;">
-                <img src="logo.jpeg" alt="DayLab Logo" style="height: 40px; width: auto; object-fit: contain;">
-                <strong>DAYLAB</strong>
+            <a href="index.html" class="logo" style="display: flex; align-items: center; text-decoration: none;">
+                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply;">
             </a>
             
             <ul>
