--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <header class="container">
         <nav>
-            <a href="index.html" class="logo" style="display: flex; align-items: center; text-decoration: none;">
-                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply;">
+            <a href="index.html" style="display: block; border: none; text-decoration: none;">
+                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
             </a>
             
             <ul>
