--- a/bloodtest.html
+++ b/bloodtest.html
@@ -1,21 +1,27 @@
-<!DOCTYPE html> <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>DayLab | Personal Health</title>
-    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DayLab | Personal Health</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="container"> <nav>
-        <div class="logo"><strong>DAYLAB</strong></div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="bloodtest.html">Bloodtest</a></li>
-            <li><a href="results.html">Results</a></li>
-            <li><a href="nutrition.html">Recommended Food</a></li> <li><a href="recipes.html">Healthy Recipes</a></li>
-        </ul>
-    </nav>
-</header>
+    <header class="container">
+        <nav>
+            <a href="index.html" style="display: block; border: none; text-decoration: none;">
+                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
+            </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bloodtest.html">Bloodtest</a></li>
+                <li><a href="results.html">Results</a></li>
+                <li><a href="nutrition.html">Recommended Food</a></li>
+                <li><a href="recipes.html">Healthy Recipes</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main class="container">
         <div class="progress-wrapper container">
