--- a/recipes.html
+++ b/recipes.html
@@ -40,6 +40,8 @@
         </section>
       
         <div id="recipe-grid" class="recipe-grid">
+            <p id="no-recipes-msg" style="display:none; text-align:center; width:100%; font-weight:bold;">All your levels are optimal! No specific corrective recipes are needed today.</p>
+
             <div class="card recipe-card" id="recipe-vitA" style="display:none;">
                 <img src="pics/potatosoup.png" alt="Soup" class="recipe-img">
                 <h3>Roasted Carrot & Sweet Potato Soup</h3>
