--- a/nutrition.html
+++ b/nutrition.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>DayLab | Personal Health</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DayLab | Nutrition Plan</title>
+    <link rel="stylesheet" href="style.css?v=7">
 </head>
 <body>
 
-    <header class="container"> 
+    <header class="container">
         <nav>
-            <a href="index.html" style="display: block; border: none; text-decoration: none;">
-                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
+            <a href="index.html" style="display: flex; align-items: center; text-decoration: none; border: none;">
+                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;" loading="lazy">
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
                 <li><a href="results.html">Results</a></li>
-                <li><a href="nutrition.html">Recommended Food</a></li> 
+                <li><a href="nutrition.html" style="color: var(--accent-red);">Recommended Food</a></li>
                 <li><a href="recipes.html">Healthy Recipes</a></li>
             </ul>
         </nav>
@@ -28,34 +28,28 @@
             <div class="progress-steps">
                 <div class="step">1 <span class="step-label">Bloodtest</span></div>
                 <div class="step">2 <span class="step-label">Results</span></div>
-                <div class="step active">3 <span class="step-label">Nutrition</span></div>
+                <div class="step active">3 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Nutrition</span></div>
                 <div class="step">4 <span class="step-label">Recipes</span></div>
                 <div class="progress-line"></div>
             </div>
         </div>
 
-        <section class="text-center" style="margin-bottom: 40px;">
-            <h1 style="color: var(--accent-red);">Your Personalized Nutrition</h1>
-            <p>Based on your bloodwork, focus on these specific foods this week.</p>
+        <section class="text-center">
+            <h1>Recommended Foods</h1>
+            <p>Whole ingredients naturally rich in the vitamins you need.</p>
         </section>
 
-        <section style="max-width: 600px; margin: 0 auto;">
-            <div class="card nutrition-summary-card">
-                <h3>Recommended Grocery List</h3>
-                <hr>
-                
-                <div id="food-list-display">
-                </div>
-
-                <div class="text-center" style="margin-top: 30px;">
-                    <a href="recipes.html" class="btn-main" id="single-recipe-btn">View My Recipe Plan</a>
-                </div>
-            </div>
-        </section>
+        <div id="nutrition-container">
+            <p style="color: #666; font-style: italic;">No data found. Please go to <a href="bloodtest.html" style="color: var(--accent-red);">Bloodtest</a> first.</p>
+        </div>
+        
+        <div class="text-center" style="margin-top: 40px;">
+            <a href="recipes.html" class="btn-main">See Meal Ideas</a>
+        </div>
     </main>
 
-    <footer class="text-center">
-        <p>&copy; 2025 DayLab Project</p>
+    <footer>
+        <p>&copy; 2025 DAYLAB – All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
