--- a/nutrition.html
+++ b/nutrition.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DayLab | Nutrition Plan</title>
-    <link rel="stylesheet" href="style.css?v=7">
+    <title>DayLab | Recommended Food</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="container">
         <nav>
-            <a href="index.html" style="display: flex; align-items: center; text-decoration: none; border: none;">
-                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;" loading="lazy">
+            <a href="index.html" style="display: block; border: none; text-decoration: none;">
+                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,7 +28,7 @@
             <div class="progress-steps">
                 <div class="step">1 <span class="step-label">Bloodtest</span></div>
                 <div class="step">2 <span class="step-label">Results</span></div>
-                <div class="step active">3 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Nutrition</span></div>
+                <div class="step active">3 <span class="step-label">Nutrition</span></div>
                 <div class="step">4 <span class="step-label">Recipes</span></div>
                 <div class="progress-line"></div>
             </div>
@@ -39,17 +39,19 @@
             <p>Whole ingredients naturally rich in the vitamins you need.</p>
         </section>
 
-        <div id="nutrition-container">
-            <p style="color: #666; font-style: italic;">No data found. Please go to <a href="bloodtest.html" style="color: var(--accent-red);">Bloodtest</a> first.</p>
+        <div id="food-list-display" style="margin-top: 30px;">
+            <p class="text-center" style="color: #666; font-style: italic;">
+                No data found. Please go to <a href="bloodtest.html">Bloodtest</a> first.
+            </p>
         </div>
-        
-        <div class="text-center" style="margin-top: 40px;">
+
+        <div class="text-center" style="margin-top: 40px; padding-bottom: 100px;">
             <a href="recipes.html" class="btn-main">See Meal Ideas</a>
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2025 DAYLAB – All rights reserved.</p>
+    <footer class="text-center">
+        <p>&copy; 2025 DayLab Project</p>
     </footer>
 
     <script src="script.js"></script>
