--- a/nutrition.html
+++ b/nutrition.html
@@ -39,10 +39,15 @@
             <p>Whole ingredients naturally rich in the vitamins you need.</p>
         </section>
 
-        <div id="food-list-display" style="margin-top: 30px;">
-            <p class="text-center" style="color: #666; font-style: italic;">
-                No data found. Please go to <a href="bloodtest.html">Bloodtest</a> first.
-            </p>
+        <div class="grocery-note">
+            <div class="note-header">
+                <h2>Grocery List</h2>
+            </div>
+            <div id="food-list-display">
+                <p class="text-center" style="color: #666; font-style: italic; padding: 20px;">
+                    No data found. Please go to <a href="bloodtest.html" style="color: var(--accent-red);">Bloodtest</a> first.
+                </p>
+            </div>
         </div>
 
         <div class="text-center" style="margin-top: 40px; padding-bottom: 100px;">
