--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="results.html">Results</a></li>
                 <li><a href="nutrition.html">Recommended Food</a></li>
                 <li><a href="recipes.html">Healthy Recipes</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
