--- a/results.html
+++ b/results.html
@@ -19,6 +19,7 @@
                 <li><a href="results.html" style="color: var(--accent-red);">Results</a></li>
                 <li><a href="nutrition.html">Recommended Food</a></li>
                 <li><a href="recipes.html">Healthy Recipes</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
