--- a/bloodtest.html
+++ b/bloodtest.html
@@ -15,7 +15,7 @@
             </a>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="bloodtest.html">Bloodtest</a></li>
+                <li><a href="bloodtest.html" style="color: var(--accent-red);">Bloodtest</a></li>
                 <li><a href="results.html">Results</a></li>
                 <li><a href="nutrition.html">Recommended Food</a></li>
                 <li><a href="recipes.html">Healthy Recipes</a></li>
@@ -25,20 +25,23 @@
     </header>
 
     <main class="container">
-        <div class="progress-wrapper container">
-            <div class="progress-steps">
-                <div class="step active">1 <span class="step-label">Bloodtest</span></div>
-                <div class="step">2 <span class="step-label">Results</span></div>
-                <div class="step">3 <span class="step-label">Nutrition</span></div>
-                <div class="step">4 <span class="step-label">Recipes</span></div>
-                <div class="progress-line"></div>
-            </div>
-        </div>
+    <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('bloodtest.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
+        <h1 style="color: white; margin-bottom: 10px;">Laboratory Data Entry</h1>
+        <p style="color: white; margin-bottom: 30px;">Enter your results precisely as they appear on your medical report.</p>
+        <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0; margin-left: auto; margin-right: auto;"></div>
+    </section>
 
-        <section class="text-center" style="margin-bottom: 40px;">
-            <h1 style="color: var(--accent-red);">Laboratory Data Entry</h1>
-            <p>Enter your results precisely as they appear on your medical report.</p>
-        </section>
+    <div class="progress-wrapper container" style="margin-bottom: 40px;">
+        <div class="progress-steps">
+            <div class="step active">1 <span class="step-label">Bloodtest</span></div>
+            <div class="step">2 <span class="step-label">Results</span></div>
+            <div class="step">3 <span class="step-label">Nutrition</span></div>
+            <div class="step">4 <span class="step-label">Recipes</span></div>
+            <div class="progress-line"></div>
+        </div>
+    </div>
+    </main>
+
     
         <section style="max-width: 550px; margin: 0 auto; padding-bottom: 100px;">
             <div class="card medical-form">
