--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
     <main class="container">
         
-        <section class="text-center" style="padding-top: 60px;">
-            <h1 style="font-size: 3rem; margin-bottom: 10px;">Understand your body.<br>Feed it right.</h1>
-            <p style="font-size: 1.1rem; color: #555;">Enter your blood results and get a personalized nutrition plan today.</p>
-            <div class="hero-line"></div>
+        <section class="text-center" style="padding-top: 120px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('daylab.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+            <h1 style="font-size: 3rem; margin-bottom: 10px; color: white;">Understand your body.<br>Feed it right.</h1>
+            <p style="font-size: 1.1rem; color: white;">Enter your blood results and get a personalized nutrition plan today.</p>
+            <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0;"></div>
         </section>
 
         <section>
