--- a/nutrition.html
+++ b/nutrition.html
@@ -25,21 +25,21 @@
     </header>
 
     <main class="container">
-    <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('nutrition.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
-        <h1 style="color: white; margin-bottom: 10px;">Recommended Foods</h1>
-        <p style="color: white; margin-bottom: 30px;">Whole ingredients naturally rich in the vitamins you need.</p>
-        <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0; margin-left: auto; margin-right: auto;"></div>
-    </section>
+        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/nutrition.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
+            <h1 style="color: white; margin-bottom: 10px;">Recommended Foods</h1>
+            <p style="color: white; margin-bottom: 30px;">Whole ingredients naturally rich in the vitamins you need.</p>
+            <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0; margin-left: auto; margin-right: auto;"></div>
+        </section>
 
-    <div class="progress-wrapper container" style="margin-bottom: 40px;">
-        <div class="progress-steps">
-            <div class="step">1 <span class="step-label">Bloodtest</span></div>
-            <div class="step">2 <span class="step-label">Results</span></div>
-            <div class="step active">3 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Nutrition</span></div>
-            <div class="step">4 <span class="step-label">Recipes</span></div>
-            <div class="progress-line"></div>
+        <div class="progress-wrapper container" style="margin-bottom: 40px;">
+            <div class="progress-steps">
+                <div class="step">1 <span class="step-label">Bloodtest</span></div>
+                <div class="step">2 <span class="step-label">Results</span></div>
+                <div class="step active">3 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Nutrition</span></div>
+                <div class="step">4 <span class="step-label">Recipes</span></div>
+                <div class="progress-line"></div>
+            </div>
         </div>
-    </div>
     </main>
 
         <div class="grocery-note">
