--- a/recipes.html
+++ b/recipes.html
@@ -25,7 +25,7 @@
     </header>
 
     <main class="container">
-        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('recipes.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
+        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/recipes.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
             <h1 style="color: white; margin-bottom: 10px;">Your Recipe Plan</h1>
             <p style="color: white; margin-bottom: 30px;">Nutrient-dense meals designed to balance your specific levels.</p>
             <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0; margin-left: auto; margin-right: auto;"></div>
