--- a/results.html
+++ b/results.html
@@ -25,7 +25,8 @@
     </header>
 
     <main class="container">
-        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/results.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">            <h1 style="color: white; margin-bottom: 10px;">Your Health Analysis</h1>
+        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/results.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
+            <h1 style="color: white; margin-bottom: 10px;">Your Health Analysis</h1>
             <p style="color: white; margin-bottom: 30px;">Based on the data you entered, here is where you stand.</p>
             <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0; margin-left: auto; margin-right: auto;"></div>
         </section>
