--- a/about.html
+++ b/about.html
@@ -25,7 +25,8 @@
     </header>
 
     <main class="container">
-        <section class="about-hero text-center" style="padding-top: 120px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/aboutus.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; display: block;">            <h1 style="color: white; font-size: 4rem; margin-bottom: 40px; text-transform: none;">About Us</h1>
+        <section class="about-hero text-center" style="padding-top: 120px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/aboutus.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; display: block;">           
+            <h1 style="color: white; font-size: 2.5rem; margin-bottom: 40px; text-transform: none;">About Us</h1>
             <div class="hero-line" style="background-color: white; opacity: 0.5; margin: 0 auto;"></div>
         </section>
 
