--- a/bloodtest.html
+++ b/bloodtest.html
@@ -25,7 +25,8 @@
     </header>
 
     <main class="container">
-        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/bloodtest.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">        <h1 style="color: white; margin-bottom: 10px;">Laboratory Data Entry</h1>
+        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/bloodtest.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
+            <h1 style="color: white; margin-bottom: 10px;">Laboratory Data Entry</h1>
             <p style="color: white; margin-bottom: 30px;">Enter your results precisely as they appear on your medical report.</p>
             <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0; margin-left: auto; margin-right: auto;"></div>
         </section>
