--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </header>
 
     <main class="container">
-        <section class="text-center" style="padding-top: 60px; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/daylab.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">            <h1 style="font-size: 3rem; margin-bottom: 10px; color: white;">Understand your body.<br>Feed it right.</h1>
+        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/daylab.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+            <h1 style="font-size: 2.5rem; margin-bottom: 10px; color: white;">Understand your body.<br>Feed it right.</h1>
             <p style="font-size: 1.1rem; color: white;">Enter your blood results and get a personalized nutrition plan today.</p>
             <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0;"></div>
         </section>
