--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DayLab | Analysis Results</title>
-    <link rel="stylesheet" href="style.css?v=7">
+    <link rel="stylesheet" href="style.css?v=8">
 </head>
 <body>
 
@@ -26,23 +26,33 @@
 
     <main class="container">
         <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/results.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
-            <h1 style="color: white; margin-bottom: 10px;">Your Health Analysis</h1>
+            <h1 style="color: white; margin-bottom: 10px; font-size: 2.5rem;">Your Health Analysis</h1>
             <p style="color: white; margin-bottom: 30px;">Based on the data you entered, here is where you stand.</p>
             <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0; margin-left: auto; margin-right: auto;"></div>
         </section>
 
-    <div class="progress-wrapper container" style="margin-bottom: 40px;">
-        <div class="progress-steps">
-            <div class="step">1 <span class="step-label">Bloodtest</span></div>
-            <div class="step active">2 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Results</span></div>
-            <div class="step">3 <span class="step-label">Nutrition</span></div>
-            <div class="step">4 <span class="step-label">Recipes</span></div>
-            <div class="progress-line"></div>
+        <div class="progress-wrapper container" style="margin-bottom: 40px;">
+            <div class="progress-steps">
+                <div class="step">1 <span class="step-label">Bloodtest</span></div>
+                <div class="step active">2 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Results</span></div>
+                <div class="step">3 <span class="step-label">Nutrition</span></div>
+                <div class="step">4 <span class="step-label">Recipes</span></div>
+                <div class="progress-line"></div>
+            </div>
         </div>
-    </div>
+
+        <div id="results-dashboard">
+            <p style="color: #666; font-style: italic; text-align: center; padding: 20px;">
+                No data found. Please go to <a href="bloodtest.html" style="color: var(--accent-red);">Bloodtest</a> and enter your values first.
+            </p>
+        </div>
+
+        <div class="text-center" style="margin-top: 40px; padding-bottom: 100px;">
+            <a href="nutrition.html" class="btn-main">See Recommended Foods</a>
+        </div>
     </main>
 
-    <footer>
+    <footer class="text-center">
         <p>&copy; 2025 DAYLAB – All rights reserved.</p>
     </footer>
 
