--- a/nutrition.html
+++ b/nutrition.html
@@ -43,7 +43,7 @@
     </main>
 
         <div class="grocery-note">
-            <div class="note-header">
+            <div class="note-header text-center">
                 <h2>Grocery List</h2>
             </div>
             <div id="food-list-display">
