--- a/recipes.html
+++ b/recipes.html
@@ -104,7 +104,7 @@
                 <img src="pics/garlic.png" alt="Broccoli" class="recipe-img" loading="lazy">
                 <h3>Garlic Roasted Broccoli & Kale</h3>
                 <p>Simple greens that provide your body with the Vitamin K needed for clotting.</p>
-                <a href="https://www.foodandwine.com/recipes/roasted-broccoli-and-kale" target="_blank" class="btn-outline">View Full Recipe</a>
+                <a href="https://realfood.tesco.com/recipes/roasted-kale-and-broccoli.html" target="_blank" class="btn-outline">View Full Recipe</a>
             </div>
 
             <div class="card recipe-card" id="recipe-iron" style="display:none;">
