--- a/bloodtest.html
+++ b/bloodtest.html
@@ -33,16 +33,22 @@
 
         <div class="progress-wrapper container" style="margin-bottom: 40px;">
             <div class="progress-steps">
-                <div class="step active">1 <span class="step-label">Bloodtest</span></div>
-                <div class="step">2 <span class="step-label">Results</span></div>
-                <div class="step">3 <span class="step-label">Nutrition</span></div>
-                <div class="step">4 <span class="step-label">Recipes</span></div>
+                <a href="bloodtest.html" class="step-link">
+                    <div class="step active">1 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Bloodtest</span></div>
+                </a>
+                <a href="results.html" class="step-link">
+                    <div class="step">2 <span class="step-label">Results</span></div>
+                </a>
+                <a href="nutrition.html" class="step-link">
+                    <div class="step">3 <span class="step-label">Nutrition</span></div>
+                </a>
+                <a href="recipes.html" class="step-link">
+                    <div class="step">4 <span class="step-label">Recipes</span></div>
+                </a>
                 <div class="progress-line"></div>
             </div>
         </div>
-    </main>
-
-    
+   
         <section style="max-width: 550px; margin: 0 auto; padding-bottom: 100px;">
             <div class="card medical-form">
                 <div class="card-header">
