--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DayLab | Analysis Results</title>
-    <link rel="stylesheet" href="style.css?v=8">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -33,16 +33,24 @@
 
         <div class="progress-wrapper container" style="margin-bottom: 40px;">
             <div class="progress-steps">
-                <div class="step">1 <span class="step-label">Bloodtest</span></div>
-                <div class="step active">2 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Results</span></div>
-                <div class="step">3 <span class="step-label">Nutrition</span></div>
-                <div class="step">4 <span class="step-label">Recipes</span></div>
+                <a href="bloodtest.html" class="step-link">
+                    <div class="step">1 <span class="step-label">Bloodtest</span></div>
+                </a>
+                <a href="results.html" class="step-link">
+                    <div class="step active">2 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Results</span></div>
+                </a>
+                <a href="nutrition.html" class="step-link">
+                    <div class="step">3 <span class="step-label">Nutrition</span></div>
+                </a>
+                <a href="recipes.html" class="step-link">
+                    <div class="step">4 <span class="step-label">Recipes</span></div>
+                </a>
                 <div class="progress-line"></div>
             </div>
         </div>
 
-        <div id="results-dashboard">
-            <p style="color: #666; font-style: italic; text-align: center; padding: 20px;">
+        <div id="results-dashboard" class="dashboard-grid">
+             <p style="color: #666; font-style: italic; text-align: center; padding: 20px; width: 100%;">
                 No data found. Please go to <a href="bloodtest.html" style="color: var(--accent-red);">Bloodtest</a> and enter your values first.
             </p>
         </div>
@@ -53,7 +61,7 @@
     </main>
 
     <footer class="text-center">
-        <p>&copy; 2025 DAYLAB – All rights reserved.</p>
+        <p>&copy; 2025 DayLab Project</p>
     </footer>
 
     <script src="script.js"></script>
