--- a/recipes.html
+++ b/recipes.html
@@ -5,46 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DayLab | Healthy Recipes</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        /* New Styles for the Filter Bar */
-        .filter-container {
-            background-color: #f8f9fa;
-            padding: 20px;
-            border-radius: 12px;
-            margin-bottom: 30px;
-            text-align: center;
-            border: 1px solid #ddd;
-        }
-        .filter-label {
-            font-weight: bold;
-            margin-right: 15px;
-            font-size: 1.1rem;
-        }
-        .filter-option {
-            display: inline-block;
-            margin: 0 10px;
-            cursor: pointer;
-        }
-        /* Style for the clickable checkboxes */
-        .filter-option input {
-            transform: scale(1.2);
-            margin-right: 5px;
-            cursor: pointer;
-        }
-        /* Nutrient text style */
-        .nutrient-stat {
-            color: #d9534f; 
-            font-weight: bold;
-            font-size: 0.95rem;
-            margin-top: -10px;
-            margin-bottom: 15px;
-        }
-        .step-link {
-            text-decoration: none;
-            color: inherit;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
 
@@ -73,10 +33,18 @@
 
         <div class="progress-wrapper container" style="margin-bottom: 40px;">
             <div class="progress-steps">
-                <a href="bloodtest.html" class="step-link"><div class="step">1 <span class="step-label">Bloodtest</span></div></a>
-                <a href="results.html" class="step-link"><div class="step">2 <span class="step-label">Results</span></div></a>
-                <a href="nutrition.html" class="step-link"><div class="step">3 <span class="step-label">Nutrition</span></div></a>
-                <a href="recipes.html" class="step-link"><div class="step active">4 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Recipes</span></div></a>
+                <a href="bloodtest.html" class="step-link">
+                    <div class="step">1 <span class="step-label">Bloodtest</span></div>
+                </a>
+                <a href="results.html" class="step-link">
+                    <div class="step">2 <span class="step-label">Results</span></div>
+                </a>
+                <a href="nutrition.html" class="step-link">
+                    <div class="step">3 <span class="step-label">Nutrition</span></div>
+                </a>
+                <a href="recipes.html" class="step-link">
+                    <div class="step active">4 <span class="step-label" style="color: var(--accent-red); font-weight: bold;">Recipes</span></div>
+                </a>
                 <div class="progress-line"></div>
             </div>
         </div>
