--- a/nutrition.html
+++ b/nutrition.html
@@ -52,6 +52,10 @@
         <div id="food-list-display" class="food-list-container">
             </div>
 
+        <div class="text-center" style="margin-top: 40px; padding-bottom: 100px;">
+            <a href="recipes.html" class="btn-main">See Healthy Recipes</a>
+        </div>
+
     </main>
 
     <footer class="text-center">
