--- a/bloodtest.html
+++ b/bloodtest.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bloodtest.html" style="color: var(--accent-red);">Bloodtest</a></li>
                 <li><a href="results.html">Results</a></li>
-                <li><a href="nutrition.html">Recommended Food</a></li>
+                <li><a href="nutrition.html">Nutrition</a></li>
                 <li><a href="recipes.html">Healthy Recipes</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
