--- a/recipes.html
+++ b/recipes.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
                 <li><a href="results.html">Results</a></li>
-                <li><a href="nutrition.html">Recommended food</a></li>
+                <li><a href="nutrition.html">Recommended Food</a></li>
                 <li><a href="recipes.html" style="color: var(--accent-red);">Healthy Recipes</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
