--- a/results.html
+++ b/results.html
@@ -20,6 +20,7 @@
             <li><a href="nutrition.html">Recommended Food</a></li>
             <li><a href="recipes.html">Healthy Recipes</a></li>
             <li><a href="about.html">About Us</a></li>
+            <li><a href="login.html" class="btn-header-login">Login</a></li>
         </ul>
     </nav>
 </header>
