--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
             <ul>
                 <li><a href="index.html" style="color: var(--accent-red);">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
-                <li><a href="results.html">Results</a></li>
-                <li><a href="nutrition.html">Recommended Food</a></li>
-                <li><a href="recipes.html">Healthy Recipes</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="login.html" class="btn-header-login">Login</a></li>
             </ul>
         </nav>
     </header>
