--- a/about.html
+++ b/about.html
@@ -13,14 +13,13 @@
             <a href="index.html" style="display: flex; align-items: center; text-decoration: none; border: none;">
                 <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
             </a>
-            <ul>
+            <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
                 <li><a href="results.html">Results</a></li>
                 <li><a href="nutrition.html">Recommended Food</a></li>
                 <li><a href="recipes.html">Healthy Recipes</a></li>
                 <li><a href="about.html" style="color: var(--accent-red);">About Us</a></li>
-                <li><a href="login.html" class="btn-header-login">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -110,9 +109,10 @@
         </section>
     </main>
 
-    <footer class="text-center final-footer">
+    <footer>
         <p>&copy; 2025 DAYLAB – All rights reserved.</p>
     </footer>
 
+    <script src="script.js"></script> 
 </body>
 </html>
