--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
             <a href="index.html" style="display: flex; align-items: center; text-decoration: none; border: none;">
                 <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;" loading="lazy">
             </a>
-            <ul>
+            <ul id="nav-links">
                 <li><a href="index.html" style="color: var(--accent-red);">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="login.html" class="btn-header-login">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -123,9 +122,10 @@
 
     </main>
 
-    <footer>
+    <footer class="text-center final-footer">
         <p>&copy; 2025 DAYLAB – All rights reserved.</p>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 </html>
