--- a/recipes.html
+++ b/recipes.html
@@ -13,15 +13,14 @@
             <a href="index.html" style="display: block; border: none; text-decoration: none;">
                 <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
             </a>
-            <ul>
+            <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="bloodtest.html">Bloodtest</a></li>
                 <li><a href="results.html">Results</a></li>
                 <li><a href="nutrition.html">Recommended Food</a></li>
-                <li><a href="recipes.html" style="color: var(--accent-red);">Healthy Recipes</a></li>
+                <li><a href="recipes.html">Healthy Recipes</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="login.html" class="btn-header-login">Login</a></li>
-            </ul>
+                </ul>
         </nav>
     </header>
 
