--- a/results.html
+++ b/results.html
@@ -8,22 +8,21 @@
 </head>
 <body>
 
-  <header class="container">
-    <nav>
-        <a href="index.html" style="display: block; border: none; text-decoration: none;">
-            <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
-        </a>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="bloodtest.html">Bloodtest</a></li>
-            <li><a href="results.html" style="color: var(--accent-red);">Results</a></li>
-            <li><a href="nutrition.html">Recommended Food</a></li>
-            <li><a href="recipes.html">Healthy Recipes</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="login.html" class="btn-header-login">Login</a></li>
-        </ul>
-    </nav>
-</header>
+    <header class="container">
+        <nav>
+            <a href="index.html" style="display: block; border: none; text-decoration: none;">
+                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
+            </a>
+            <ul id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bloodtest.html">Bloodtest</a></li>
+                <li><a href="results.html">Results</a></li>
+                <li><a href="nutrition.html">Recommended Food</a></li>
+                <li><a href="recipes.html">Healthy Recipes</a></li>
+                <li><a href="about.html">About Us</a></li>
+                </ul>
+        </nav>
+    </header>
 
     <main class="container">
         <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/results.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px;">
