--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
 </head>
 <body>
 
-    <header style="width: 100%; background-color: var(--white); border-bottom: 1px solid var(--gray-border);">
-        <div class="container">
-            <nav>
-                <a href="index.html" style="display: flex; align-items: center; text-decoration: none; border: none;">
-                    <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;">
-                </a>
-                <ul id="nav-links">
-                    <li><a href="index.html" style="color: var(--accent-red);">Home</a></li>
-                    <li><a href="bloodtest.html">Bloodtest</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header class="container">
+        <nav>
+            <a href="index.html" style="display: flex; align-items: center; text-decoration: none; border: none;">
+                <img src="logo1.png" alt="DayLab Logo" style="height: 50px; width: auto; mix-blend-mode: multiply; display: block;" loading="lazy">
+            </a>
+            <ul id="nav-links">
+                <li><a href="index.html" style="color: var(--accent-red);">Home</a></li>
+                <li><a href="bloodtest.html">Bloodtest</a></li>
+                <li><a href="about.html">About Us</a></li>
+            </ul>
+        </nav>
     </header>
 
-
-    <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/daylab.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <h1 style="font-size: 2.5rem; margin-bottom: 10px; color: white;">Understand your body.<br>Feed it right.</h1>
-        <p style="font-size: 1.1rem; color: white;">Enter your blood results and get a personalized nutrition plan today.</p>
-        <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0;"></div>
-    </section>
-    
     <main class="container">
+        <section class="text-center" style="padding-top: 100px; padding-bottom: 0; background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('pics/daylab.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+            <h1 style="font-size: 2.5rem; margin-bottom: 10px; color: white;">Understand your body.<br>Feed it right.</h1>
+            <p style="font-size: 1.1rem; color: white;">Enter your blood results and get a personalized nutrition plan today.</p>
+            <div class="hero-line" style="background-color: white; opacity: 0.5; margin-bottom: 0;"></div>
+        </section>
 
         <section>
             <h2 class="text-center" style="margin-bottom: 40px; color: var(--dark-text);">How it works</h2>
