--- a/bloodtest.html
+++ b/bloodtest.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DayLab | Personal Health</title>
     <link rel="stylesheet" href="style.css">
+    
+    <style>
+        /* Container for the two columns */
+        .form-split-container {
+            display: flex;
+            gap: 40px; /* Space between columns */
+            padding: 25px;
+        }
+
+        /* Individual columns */
+        .form-column {
+            flex: 1; /* Makes them equal width */
+        }
+
+        /* Section Titles (Vitamins / Minerals) */
+        .section-title {
+            font-weight: bold;
+            color: #A63A3A; /* Your accent red */
+            text-transform: uppercase;
+            font-size: 0.9rem;
+            letter-spacing: 1px;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 10px;
+        }
+
+        /* Responsive: Stack them on mobile phones */
+        @media screen and (max-width: 768px) {
+            .form-split-container {
+                flex-direction: column;
+                gap: 0;
+            }
+        }
+    </style>
 </head>
 <body>
 
@@ -81,28 +115,4 @@
                         <div class="form-group"><label>Potassium</label><div class="input-wrapper"><input type="number" id="potassium-input" placeholder="0.0"><span class="unit">mmol/L</span></div></div>
                         <div class="form-group"><label>Selenium</label><div class="input-wrapper"><input type="number" id="selenium-input" placeholder="0.0"><span class="unit">µg/L</span></div></div>
                         <div class="form-group"><label>Copper</label><div class="input-wrapper"><input type="number" id="copper-input" placeholder="0.0"><span class="unit">µg/dL</span></div></div>
-                        <div class="form-group"><label>Iodine</label><div class="input-wrapper"><input type="number" id="iodine-input" placeholder="0.0"><span class="unit">µg/L</span></div></div>
-                        <div class="form-group"><label>Manganese</label><div class="input-wrapper"><input type="number" id="manganese-input" placeholder="0.0"><span class="unit">µg/L</span></div></div>
-                        <div class="form-group"><label>Phosphorus</label><div class="input-wrapper"><input type="number" id="phosphorus-input" placeholder="0.0"><span class="unit">mg/dL</span></div></div>
-                        <div class="form-group"><label>Sodium</label><div class="input-wrapper"><input type="number" id="sodium-input" placeholder="0.0"><span class="unit">mmol/L</span></div></div>
-                    </div>
-
-                </div>
-                <div style="padding: 25px;">
-                    <button id="analyze-btn" class="btn-main" style="width: 100%;">View Results</button>
-                </div>
-                
-                <p class="form-footer">
-                    <small>All 20 biomarkers are compared against standard clinical ranges.</small>
-                </p>
-            </div>
-        </section>
-    </main>
-
-    <footer class="text-center">
-        <p>&copy; 2025 DayLab Project</p>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                        <div class="form-group"><label>Iodine</label><div class="input-wrapper"><input type="number" id="iodine-input" placeholder="0.0
