--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <section class="hero-full-width" style="background-image: url('pics/home.jpg');">
+    <section class="hero-full-width" style="background-image: url('pics/daylab.jpg');">
         <div class="hero-overlay">
             <h1 style="color: white; margin-bottom: 10px; font-size: 3rem;">Understand your body.</h1>
             <h1 style="color: white; margin-bottom: 20px; font-size: 3rem;">Feed it right.</h1>
