--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="nutrition.html">Nutrition</a></li>
                 <li><a href="recipes.html">Healthy Recipes</a></li>
                 <li><a href="about.html">About Us</a></li>
+                <li><a href="#" class="btn-header-login">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -101,4 +102,43 @@
                     </div>
                 </div>
                 <div class="timeline-item right">
-                    <div class="
+                    <div class="timeline-dot"></div>
+                    <span class="phase-label">Step 4</span>
+                    <div class="card">
+                        <h3>Recipes</h3>
+                        <p>Cook meals designed to heal your body.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section style="max-width: 800px; margin: 0 auto; padding-bottom: 80px;">
+            <div class="text-center" style="margin-bottom: 40px;">
+                <h2>Frequently Asked Questions</h2>
+            </div>
+            
+            <details>
+                <summary>Is my medical data safe?</summary>
+                <p>Yes. Your data is processed locally on your device for analysis and is never sold to third parties.</p>
+            </details>
+
+            <details>
+                <summary>Do I need a doctor's referral?</summary>
+                <p>No, you can use results from any standard blood test you have already taken.</p>
+            </details>
+
+            <details>
+                <summary>Are the recipes vegan friendly?</summary>
+                <p>Yes! Our recipe engine allows you to filter by Vegan, Vegetarian, Gluten-Free, and Lactose-Free options.</p>
+            </details>
+        </section>
+
+    </main>
+
+    <footer class="text-center">
+        <p>&copy; 2025 DayLab Project</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
