--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
     <main class="container">
         
-        <section class="text-center" style="padding-top: 100px; padding-bottom: 100px; background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('pics/daylab.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px; border-radius: 8px;">
-            <h1 style="color: white; margin-bottom: 10px; font-size: 3rem;">Understand your body.</h1>
-            <h1 style="color: white; margin-bottom: 20px; font-size: 3rem;">Feed it right.</h1>
-            <p style="color: white; font-size: 1.2rem; margin-bottom: 30px;">Enter your blood results and get a personalized nutrition plan today.</p>
-            <a href="bloodtest.html" class="btn-main" style="background-color: var(--accent-red); color: white; padding: 15px 30px; font-size: 1rem; margin-left: auto; margin-right: auto;">Start Your Analysis</a>
+        <section class="text-center" style="padding-top: 100px; padding-bottom: 100px; background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('pics/daylab.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 40px; border-radius: 12px; box-shadow: 0 10px 20px rgba(0,0,0,0.1);">
+            <h1 style="color: white; margin-bottom: 10px; font-size: 3rem; text-shadow: 0 2px 4px rgba(0,0,0,0.3);">Understand your body.</h1>
+            <h1 style="color: white; margin-bottom: 20px; font-size: 3rem; text-shadow: 0 2px 4px rgba(0,0,0,0.3);">Feed it right.</h1>
+            <p style="color: white; font-size: 1.2rem; margin-bottom: 30px; text-shadow: 0 1px 2px rgba(0,0,0,0.3);">Enter your blood results and get a personalized nutrition plan today.</p>
+            <a href="bloodtest.html" class="btn-main" style="background-color: var(--accent-red); color: white; padding: 15px 30px; font-size: 1rem; margin-left: auto; margin-right: auto; box-shadow: 0 4px 6px rgba(0,0,0,0.2);">Start Your Analysis</a>
         </section>
 
         <section class="science-section">
