--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
     </main>
 
-    <footer class="text-center final-footer">
-        <p>&copy; 2025 DAYLAB – All rights reserved.</p>
-    </footer>
+<footer class="text-center">
+    <p>&copy; 2025 DAYLAB – All rights reserved.</p>
+</footer>
 
     <script src="script.js"></script>
 </body>
